# python-project-lvl1

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: linter_push.yml
brain_game/: __init__.py  cli.py  engine.py
brain_game/games/: __init__.py  calc.py  calc_module.py  check_user_answer.py  correct_answers.py  engine_of_game.py  even.py  even_module.py  gcd.py  gcd_module.py  prime.py  prime_module.py  progression.py  progression_module.py
brain_game/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
hexlet/auto_test/package_name/: capitalize.py
hexlet/auto_test/tests/: test_capitalize.py
pythonProject/hexlet_pytest/: pyproject.toml
